--- a/settingsmeta.json
+++ b/settingsmeta.json
@@ -1,37 +1,20 @@
 {
-    "name": "Localmusicplayer",
+    "name": "Local Music Player",
     "skillMetadata": {
         "sections": [
             {
-                "name": "Options << Name of section",
-                "fields": [
-                    {
-                        "name": "internal_python_variable_name",
-                        "type": "text",
-                        "label": "Setting Friendly Display Name",
-                        "value": "",
-                        "placeholder": "demo prompt in the input box"
-                    }
-                ]
-            },
-            {
-                "name": "Login << Name of another section",
+                "name": "Configuration",
                 "fields": [
                     {
                         "type": "label",
-                        "label": "Just a little bit of extra info for the user to understand following settings"
+                        "label": ""
                     },
                     {
-                        "name": "username",
+                        "name": "musicsource",
                         "type": "text",
-                        "label": "Username",
-                        "value": ""
-                    },
-                    {
-                        "name": "password",
-                        "type": "password",
-                        "label": "Password",
-                        "value": ""
+                        "label": "Music sourcefolder",
+                        "value": "",
+                        "placeholder": "path to music"
                     }
                 ]
             }
